talent-app/main/default/objects/Comment_Tag__c/Comment_Tag__c.object-meta.xml
<CustomObject>
    <label>Comment Tag</label>
    <nameField>
        <label>Comment Tag Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>