talent-app/main/default/objects/Comment_Tag__c/fields/Comment_ID__c.field-meta.xml
<CustomField>
    <fullName>Comment_ID__c</fullName>
    <label>Comment ID</label>
    <referenceTo>Skill_Comment__c</referenceTo>
    <relationshipLabel>Comment Tag</relationshipLabel>
    <relationshipName>Skill_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>