talent-app/main/default/objects/Comment_Tag__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>