talent-app/main/default/objects/Comment_Tag__c/fields/Tag_ID__c.field-meta.xml
<CustomField>
    <fullName>Tag_ID__c</fullName>
    <label>Tag ID</label>
    <referenceTo>Tag__c</referenceTo>
    <relationshipLabel>Comment Tag</relationshipLabel>
    <relationshipName>Tags</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>