talent-app/main/default/objects/Comment_Tag__c/listViews/List.listView-meta.xml
<ListView>
    <fullName>List</fullName>
    <columns>NAME</columns>
    <columns>Comment_ID__c</columns>
    <columns>Tag_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>List</label>
</ListView>